// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSection renders with shouldAlertFailureCount = <false> 1`] = `
<div
  className="result-section-class-name resultSection"
>
  <h2>
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={Object {}}
      shouldAlertFailuresCount={false}
    />
  </h2>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={Object {}}
    shouldAlertFailuresCount={false}
  />
</div>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <true> 1`] = `
<div
  className="result-section-class-name resultSection"
>
  <h2>
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={Object {}}
      shouldAlertFailuresCount={true}
    />
  </h2>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={Object {}}
    shouldAlertFailuresCount={true}
  />
</div>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <undefined> 1`] = `
<div
  className="result-section-class-name resultSection"
>
  <h2>
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={Object {}}
    />
  </h2>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={Object {}}
  />
</div>
`;
